--- a/index.html
+++ b/index.html
@@ -18,31 +18,45 @@
                         <li><a href="#fitness">Fitness</a></li>
                         <li><a href="#nutrition">Nutrition</a></li>
                         <li><a href="#trainer">Trainer</a></li>
-                        <li><a href="#gymwears">Gym Wears</a></li>
+                        <li><a href="#gymclasses">Gym Classes</a></li>
                     </ul>
                 </nav>
         </header>
 
-        <!-- Main Content containg various sections -->
+        <!-- Main Content that contains various sections -->
 
         <main>
             <section id="fitness" class="sections sec-1">
                 <h2>Fitness</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, quo, ratione quasi dignissimos iste nihil, repellat non itaque dolores mollitia facere magni maiores? Doloribus eum laboriosam quia incidunt iste beatae.</p>
+                <div class="line"></div>
+                <div class="fitness-img">
+                    <img src="images/gymdance.jpg" width="50" alt="People in the gym exercising">
+                </div>
+                <h3>Welcome to Strong Fitness</h3>
+                <p>Fitness isn't always what you can lose. <br>
+                It is also more about what your body can gain.</p>
             </section>
 
             <section id="nutrition" class="sections sec-2">
                 <h2>Nutrition</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, eveniet.</p>
+                <div class="line"></div>
+                <div class="nutrition-img-text">
+                    <div class="nutri-items"><img src="images/nutrition4.jpg" width="70" alt="nutritious food"> <span>Eat tiny portions to <br> gain lean muscles. <br> Try not starve yourself.</span></div>
+                    <div class="nutri-items"><img src="images/nutrition1.jpg" width="70" alt="nutritious food"> <span>Avoid junk foods and stick <br> to healthy foods like <br> carrots, cucumber, and natural foods.</span></div>
+                    <div class="nutri-items"><img src="images/nutrition2.jpg" width="70" alt="nutritious food"> <span>Make sure you make proper use <br> of your blender. <br> Blend fruits like pineapples, <br> strawberries, oranges, bananas, <br> once a day.</span></div>
+                    <div class="nutri-items"><img src="images/nutrition3.jpg" width="70" alt="nutritious food"> <span>Eat healthy</span></div>
+                </div>
             </section>
 
             <section id="trainer" class="sections sec-3">
                 <h2>Trainer</h2>
+                <div class="line"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus?</p>
             </section>
 
-            <section id="gymwears" class="sections sec-4">
-                <h2>Gym Wears</h2>
+            <section id="gymclasses" class="sections sec-4">
+                <h2>Gym Classes</h2>
+                <div class="line"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia magnam laudantium ad reiciendis? Sed cupiditate iste aliquam modi distinctio dolor!</p>
             </section>
         </main>
