I have worked on all the sections of the page for the mobile view, except for the footer section.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <ul>
                         <li><a href="#fitness">Fitness</a></li>
                         <li><a href="#nutrition">Nutrition</a></li>
-                        <li><a href="#trainer">Trainer</a></li>
+                        <li><a href="#training">Training</a></li>
                         <li><a href="#gymclasses">Gym Classes</a></li>
                     </ul>
                 </nav>
@@ -26,38 +26,67 @@
         <!-- Main Content that contains various sections -->
 
         <main>
+            <!-- Fitness Section -->
             <section id="fitness" class="sections sec-1">
                 <h2>Fitness</h2>
                 <div class="line"></div>
                 <div class="fitness-img">
-                    <img src="images/gymdance.jpg" width="50" alt="People in the gym exercising">
+                    <img src="images/gymdance.jpg" width="50" alt="People in the gym exercising" />
                 </div>
                 <h3>Welcome to Strong Fitness</h3>
                 <p>Fitness isn't always what you can lose. <br>
                 It is also more about what your body can gain.</p>
             </section>
 
+            <!-- Nutrition Section -->
             <section id="nutrition" class="sections sec-2">
                 <h2>Nutrition</h2>
                 <div class="line"></div>
                 <div class="nutrition-img-text">
-                    <div class="nutri-items"><img src="images/nutrition4.jpg" width="70" alt="nutritious food"> <span>Eat tiny portions to <br> gain lean muscles. <br> Try not starve yourself.</span></div>
-                    <div class="nutri-items"><img src="images/nutrition1.jpg" width="70" alt="nutritious food"> <span>Avoid junk foods and stick <br> to healthy foods like <br> carrots, cucumber, and natural foods.</span></div>
-                    <div class="nutri-items"><img src="images/nutrition2.jpg" width="70" alt="nutritious food"> <span>Make sure you make proper use <br> of your blender. <br> Blend fruits like pineapples, <br> strawberries, oranges, bananas, <br> once a day.</span></div>
-                    <div class="nutri-items"><img src="images/nutrition3.jpg" width="70" alt="nutritious food"> <span>Eat healthy</span></div>
+                    <div class="nutri-items"><img src="images/nutrition4.jpg" width="70" alt="A guy holding a plate of food shirtless." /> <span>Eat tiny portions to <br> gain lean muscles. <br> Try not starve yourself.</span></div>
+                    <div class="nutri-items"><img src="images/nutrition1.jpg" width="70" alt="Different vegetables, carrots and tomatoes" /> <span>Avoid junk foods and stick <br> to healthy foods like <br> carrots, cucumber, and natural foods.</span></div>
+                    <div class="nutri-items"><img src="images/nutrition2.jpg" width="70" alt="Pineapple, banana, strawberries and oranges on a table." /> <span>Make sure you make proper use <br> of your blender. <br> Blend fruits like pineapples, <br> strawberries, oranges, bananas, <br> once a day.</span></div>
+                    <div class="nutri-items"><img src="images/nutrition3.jpg" width="70" alt="Different fruits and vegetables with oranges and spinnach." /> <span>Your meals should always be as <br> colorful as the rainbow.</span></div>
                 </div>
             </section>
 
-            <section id="trainer" class="sections sec-3">
-                <h2>Trainer</h2>
-                <div class="line"></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus?</p>
+            <!-- Training Section -->
+            <section id="training" class="sections sec-3">
+                <h2>Training</h2>
+                <div class="trainer-content">
+                    <p>Find some of the best training programs. <br>
+                    Work on the following:</p>
+                    <ul>
+                        <li>Core</li>
+                        <li>Abs</li>
+                        <li>Legs</li>
+                        <li>Shoulders</li>
+                        <li>Chest</li>
+                        
+                    </ul>
+                </div>
             </section>
-
+            <!-- Gym Classes section -->
             <section id="gymclasses" class="sections sec-4">
                 <h2>Gym Classes</h2>
                 <div class="line"></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia magnam laudantium ad reiciendis? Sed cupiditate iste aliquam modi distinctio dolor!</p>
+                <div class="gymclass-box">
+                    <div class="gymclass-items">
+                        <img src="images/gymexercise.jpg" width="100" alt="People on the track doing exercise."/>
+                        <p>Track Exercises</p>
+                    </div>
+
+                    <div class="gymclass-items">
+                        <img src="images/gymyoga.jpg" width="100" alt="People in the gym doing yoga."/>
+                        <p>Yoga classes</p>
+                    </div>
+
+                    <div class="gymclass-items">
+                        <img src="images/gymguy1.jpg" width="100" alt="A guy workingout in the gym."/>
+                        <p>Body building</p>
+                    </div>
+
+                </div>
             </section>
         </main>
 
