--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Strong Fitness</h1>
             <nav class="navigation">
                 <ul>
-                    <li><a href="#fitness">Fitness</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#nutrition">Nutrition</a></li>
                     <li><a href="#training">Training</a></li>
                     <li><a href="#gymclasses">Gym Classes</a></li>
@@ -29,9 +29,9 @@
 
         <main>
             <!-- Fitness Section -->
-            <section id="fitness" class="sections sec-1">
+            <section id="home" class="sections sec-1">
                 <div class="fitness-container">
-                    <h2>Fitness</h2>
+                    <h2>Let's Get Strong!</h2>
                     <div class="line fitness-line"></div>
                     <div class="fitness-img">
                         <img src="images/gymdance.jpg" width="50" alt="People in the gym exercising" />
@@ -105,6 +105,8 @@
         <footer id="footer">
             <h2>footer</h2>
         </footer>
+
+        <div class="back-to-top"><a href="#top">Back to top</a></div>
 
 
         
