Added some social links logo and fixed a couple of paddings and margins. Finally done with the mobile view of the website (320px). Also done with the footer section.

--- a/index.html
+++ b/index.html
@@ -103,13 +103,47 @@
         </main>
 
         <footer id="footer">
-            <h2>footer</h2>
+            <h2>Strong Fitness</h2>
+            <p>THE TIME IS NOW!!!</p>
+            <div class="footer1-box footer-lists">
+                <h3>Fitness Plan</h3>
+
+                <ul>
+                    <li><a href="#">Workout plan</a></li>
+                    <li><a href="#">Fitness Training</a></li>
+                    <li><a href="#">Nutrition Plan</a></li>
+                    <li><a href="#">Healthy living</a></li>
+                </ul>
+            </div>
+
+            <div class="line"></div>
+
+
+            <div class="footer2-box footer-lists">
+                <h3>About</h3>
+                
+                <ul>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Fitness videos</a></li>
+                    <li><a href="#">Our Team</a></li>
+                    <li><a href="#">Membership</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+
+            <div class="line"></div>
+
+            <div class="social-links">
+                <a href="#"><img src="/images/fblogo.png" width="30" alt="Facebook logo"></a>
+                <a href="#"><img src="/images/twitterlogo.png" width="30" alt="Twitter logo"></a>
+                <a href="#"><img src="/images/iglogo.png" width="30" alt="instagram logo"></a>
+                <a href="#"><img src="/images/pinterestlogo.png" width="30" alt="pinterest logo"></a>
+            </div>
+
+            <div class="back-to-top"><a href="#top">Back to top</a></div>
+
         </footer>
-
-        <div class="back-to-top"><a href="#top">Back to top</a></div>
-
-
-        
+ 
 
     </div>
 
